Fix top bar z-index

--- a/suhoshin/suhoshin.css
+++ b/suhoshin/suhoshin.css
@@ -37,6 +37,7 @@ nav {
     background: #fff;
     text-align: center;
 	padding: 20px 0;
+	z-index: 10;
 }
 
 nav a {
